[package]
name = "skyheart-rogues"
version = "0.1.0"
edition = "2024"
description = "A roguelike game about magical girls"
readme = "README.md"
repository = "https://github.com/letheka/skyheart-rogues"
license = "GPL-3.0-or-later"
keywords = ["game", "roguelike"]

[dependencies]
bevy = "0.18.1"
bevy_app = "0.18.1"
bevy_ecs = "0.18.1"
rand = "0.10"
rand_core = "0.10"
bevy_rand = "0.14"
bevy_prng = { version = "0.14", features = ["wyrand"] }
binary-greedy-meshing = { git = "https://github.com/suprohub/binary-greedy-meshing.git" }
